fixing close button z-index on user popover

--- a/public/css/map.css
+++ b/public/css/map.css
@@ -272,6 +272,7 @@ svg .st1 {
     color: var(--link-color);
     display: block;
     margin-top: 10px;
+    z-index: 1;
 }
 
 .stats {
